Gradient contrast fixed

--- a/style.css
+++ b/style.css
@@ -41,11 +41,12 @@ li {
 }
 li:hover {
 	text-decoration: none;
-	background: #ff3232;
-	background: -moz-linear-gradient(top, #ff3232 0%, #f42222 45%, #ff0000 100%);
-	background: -webkit-linear-gradient(top, #ff3232 0%,#f42222 45%,#ff0000 100%);
-	background: linear-gradient(to bottom, #ff3232 0%,#f42222 45%,#ff0000 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#ff0000',GradientType=0 );
+	color: #FFFFFF;
+	background: #aa1a12;
+	background: -moz-linear-gradient(-45deg, #aa1a12 0%, #a00000 100%);
+	background: -webkit-linear-gradient(-45deg, #aa1a12 0%,#a00000 100%);
+	background: linear-gradient(135deg, #aa1a12 0%,#a00000 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aa1a12', endColorstr='#a00000',GradientType=1 );
 	opacity: 0.9;
 }
 a {
@@ -54,7 +55,7 @@ a {
 a:hover {
 	color: white;
 	text-decoration: none;
-}
+}	
 i {
 	font-size: 2.5rem; 
 	color: white;
@@ -65,12 +66,12 @@ i:hover {
 	}
 article {
 	margin-top: 2%;
-	color: white;
-	background: #ff3232;
-	background: -moz-linear-gradient(top, #ff3232 0%, #f42222 45%, #ff0000 100%);
-	background: -webkit-linear-gradient(top, #ff3232 0%,#f42222 45%,#ff0000 100%);
-	background: linear-gradient(to bottom, #ff3232 0%,#f42222 45%,#ff0000 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#ff0000',GradientType=0 );
+	color: #FFFFFF;
+	background: #aa1a12;
+	background: -moz-linear-gradient(-45deg, #aa1a12 0%, #a00000 100%);
+	background: -webkit-linear-gradient(-45deg, #aa1a12 0%,#a00000 100%);
+	background: linear-gradient(135deg, #aa1a12 0%,#a00000 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aa1a12', endColorstr='#a00000',GradientType=1 );
 	opacity: 0.9;
 }
 footer {
